[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdbind"
version = "0.1.0"
description = "MdBind — Structured memory in plain Markdown"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "markdown-it-py>=3.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
mdb = "mdbind.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
